--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ target/classes/Monster.class
 target/classes/TheGame$1.class
 target/classes/TheGame.class
 target/classes/Player.class
+.gitignore.orig
+target/classes/META-INF/ShrinkingRoom.kotlin_module
