--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-*.class
-*.xml
+.idea/
+target/classes/Monster.class
+target/classes/TheGame$1.class
+target/classes/TheGame.class
+target/classes/Player.class
