--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 target/classes/Monster.class
 target/classes/TheGame$1.class
 target/classes/TheGame.class
+target/classes/META-INF/LanternaLab.kotlin_module
+target/classes/Player.class
